# eli.nabro

./: .gitignore  pyproject.toml  readme.md
kakao_developers_helper_bot/: .gitignore  pcconfig.py
kakao_developers_helper_bot/assets/: kakaosink.txt
kakao_developers_helper_bot/assets/project3_data/: kakao_sink.txt  kakao_social.txt  kakao_talk_channel.txt
kakao_developers_helper_bot/assets/template/: evaluate_check.txt  information_response.txt  intent_list.txt  job_list.txt  parse_job.txt  select_wiki_page.txt
kakao_developers_helper_bot/kakao_developers_helper_bot/: kakao_developers_helper_bot.py
kakao_developers_helper_bot/kakao_developers_helper_bot/langchain_call/: chroma_db_repository.py  lang_chain_assistant.py
simple_chatbot/: .gitignore  pcconfig.py
simple_chatbot/simple_chatbot/: simple_chatbot.py
