[tool.poetry]
name = "maireneu"
version = "0.1.0"
description = ""
authors = ["maireneu <maireneu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.28.0"
pandas = "^2.1.0"
pynecone = "^0.1.34"
numpy = "^1.25.2"
tqdm = "^4.66.1"
aiohttp = "^3.8.5"
langchain = "^0.0.294"
chromadb = "0.3.23"
duckdb = {version = "^0.8.2.dev4711", allow-prereleases = true}
tiktoken = "^0.5.1"
google-api-wrapper = "^2.0.0a1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
